<resources>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_name">SurveySaurus</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="your_surveys">Your Surveys</string>

    <!-- Home Page -->
    <string name="survey_saurus">Surveysaurus</string>
    <!-- Home Page -->

    <!-- User Info -->
    <string name="personal_info">Personal Info</string>
    <string name="view_name_info">Name:</string>
    <string name="Email_Adress_info">Email Address:</string>
    <string name="view_gender_info">Gender:</string>
    <string name="view_country_info">Country:</string>
    <string name="view_city_info">City:</string>
    <string name="password_info">Password:</string>
    <string name="Confirm_Password_info">Confirm Password:</string>
    <string name="Update_button">Update</string>
    <!-- User Info -->

    <!-- Create Survey  -->
    <string name="survey_name_hint">Survey Name</string>
    <string name="add_option_hint">Add Your Option</string>
    <string name="add_option_button">+ Add Option</string>
    <!-- Create Survey -->

    <!-- Fill Survey -->
    <string name="see_world">See what the world said</string>
    <string name="swipe_for_comments">Swipe to see comments</string>
    <!-- Fill Survey -->


    <!-- Login  -->
    <string name="continue_with_button">Continue with Google</string>
    <string name="Login">Login</string>
    <string name="Sign_up_button">Sign up</string>
    <string name="Email_Address">Email Address</string>
    <string name="view_name">Name</string>
    <string name="view_gender">Gender</string>
    <string name="view_country">Country</string>
    <string name="view_city">City</string>
    <string name="d_sign_up">Don’t have an account? Sign up</string>
    <!-- Login  -->

    <!-- Sign Up  -->
    <string name="Enter_your_mail_adress">Enter your e-mail address</string>
    <string name="Enter_name">Enter your name*</string>
    <string name="password_hint">password</string>

    <string-array name="Genders">
        <item>Man</item>
        <item>Woman</item>
        <item>Decline to Answer</item>
    </string-array>

    <string-array name="Country">
        <item>Turkey</item>
        <item>USA</item>
        <item>England</item>
    </string-array>

    <string-array name="City">
        <item>Istanbul</item>
        <item>Ankara</item>
        <item>New York</item>
        <item>Washington</item>
        <item>London</item>
    </string-array>

    <string name="Sign_in">Already have an account? Sign in</string>
    <string name="Password">Password</string>
    <string name="confirm_Password">Confirm your password</string>
    <string name="star">*</string>
    <!-- Sign Up  -->

    <string name="user_name">find me at strings.xml</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>